# Ancient-Projects

./: .gitignore  README.md
c++/: .gitignore
c++/city-game/: .gitignore  CMakeLists.txt  README.md
c++/city-game/Data/Buildings/: Farm.build  House.build  Hut.build  Ore Refinary.txt  Ore Refinery.build  Small Stone Mine.build  Template.build  Woodcutting Hut.build
c++/city-game/Data/Maps/: River City.cgm
c++/city-game/Logs/: Log 3-8-2019 17-19-23.txt  Log 3-8-2019 17-46-49.txt  Log 3-8-2019 17-47-11.txt  Log 3-8-2019 17-47-47.txt  Log 3-8-2019 17-48-14.txt
c++/city-game/Source/: Main.cpp
c++/city-game/Source/Game/: Game.cpp  Game.h
c++/city-game/Source/Game/City/: City.cpp  City.h  City_Loader.cpp  City_Values.cpp  City_Values.h  Person.cpp  Person.h  Person_Group.h
c++/city-game/Source/Game/City/Buildings/: Builder.cpp  Builder.h  Building.cpp  Building.h  Building_Data.cpp  Building_Data.h  Building_Loader.cpp  Building_Preview.cpp  Building_Preview.h  E_Building_Use.h
c++/city-game/Source/Game/GUI/: Button.cpp  Button.h  GUI.cpp  GUI.h  GUI_Feature.cpp  GUI_Feature.h  Image.cpp  Image.h  Special_Button.h  Symbolled_Update_Label.cpp  Symbolled_Update_Label.h
c++/city-game/Source/Game/Managers/: Music_Manager.cpp  Music_Manager.h  Resource_Identifier.h  Resource_Manager.h
c++/city-game/Source/Game/States/: Menu.cpp  Menu.h  Playing.cpp  Playing.h  Splash_Screen.cpp  Splash_Screen.h  State_Base.cpp  State_Base.h  State_Handler.cpp  State_Handler.h
c++/city-game/Source/Game/Util/: Debug_Log.cpp  Debug_Log.h  FPS_Counter.cpp  FPS_Counter.h  Mouse.cpp  Mouse.h  Random.cpp  Random.h  Window.cpp  Window.h
c++/city-game/scripts/: debug.sh  deploy.sh  run.sh
c++/doodle-jump/: CMakeLists.txt  README.md
c++/doodle-jump/Source/: main.cpp
c++/doodle-jump/Source/Game/: game.cpp  game.h
c++/doodle-jump/Source/Game/Game_Objects/: platform.cpp  platform.h  player.cpp  player.h
c++/doodle-jump/Source/Game/Managers/: music_manager.cpp  music_manager.h  resource_identifier.h  resource_manager.h
c++/doodle-jump/Source/Game/States/: e_play_themes.h  menu.cpp  menu.h  playing.cpp  playing.h  splash_screen.cpp  splash_screen.h  state_base.cpp  state_base.h  state_handler.cpp  state_handler.h
c++/doodle-jump/Source/Game/Util/: random.cpp  window.cpp  window.h
c++/doodle-jump/scripts/: debug.sh  deploy.sh  run.sh
c++/faster-than-wind/ftw-editor/: CMakeLists.txt  README.md  toaddaroom.txt
c++/faster-than-wind/ftw-editor/scripts/: debug.sh  deploy.sh  run.sh
c++/faster-than-wind/ftw-editor/src/: main.cpp  program.cpp  program.h  texturemanager.cpp  texturemanager.h
c++/faster-than-wind/ftw-editor/src/Editor/: background.cpp  background.h  dotmap.cpp  dotmap.h  ghost.cpp  ghost.h  object.cpp  object.h
c++/faster-than-wind/ftw-editor/src/Editor/ShipObjects/: room.cpp  room.h  unit.cpp  unit.h  wall.cpp  wall.h
c++/faster-than-wind/ftw-editor/src/Editor/UI/: button.cpp  button.h  currentlyselected.cpp  currentlyselected.h  objectmenu.cpp  objectmenu.h
c++/faster-than-wind/ftw-editor/src/States/: edit_state.cpp  edit_state.h  edit_state_file_handler.cpp  edit_state_room_mode.cpp  edit_state_unit_mode.cpp  edit_state_wall_mode.cpp  start_state.cpp  start_state.h  state.cpp  state.h
c++/ftw-game/: .gitignore  CMakeLists.txt  README.md
c++/ftw-game/Resources/Ship Info/: Ship3.ship  StarterShip2.ship  StarterShip3.ship
c++/ftw-game/Resources/Textures/Backgrounds/: Thumbs.db  Title.pdn
c++/ftw-game/Resources/Textures/Menu Buttons/: Thumbs.db
c++/ftw-game/Resources/Textures/Rooms/: Thumbs.db
c++/ftw-game/Resources/Textures/Rooms/old/: Thumbs.db
c++/ftw-game/Resources/Textures/Ships/: Thumbs.db
c++/ftw-game/Resources/Textures/Spl Scr/: Thumbs.db
c++/ftw-game/Resources/Textures/Splash Screen/: Thumbs.db
c++/ftw-game/scripts/: deploy.sh  run.sh
c++/ftw-game/src/Engine/: animation.cpp  game.cpp  game.h  spritedancer.h
c++/ftw-game/src/Engine/ResourceManagers/: font_m.cpp  texture_m.h
c++/ftw-game/src/Engine/UI/: button.cpp  button.h  unitshower.cpp  unitshower.h
c++/ftw-game/src/Objects/: water.cpp  water.h
c++/ftw-game/src/Objects/Ship_Objects/: room.h  ship_objects_inc.h  wall.cpp  wall.h
c++/ftw-game/src/States/: mainmenu.h  splashscreen.cpp  state.h  statehandler.cpp
c++/ftw-game/src/States/Playing/: play.cpp
c++/ftw-game/src/Utilities/: random.h
c++/ftw-game/src/legacy/: pathfinding.cpp  pathfinding.h
c++/heli-attack/: CMakeLists.txt  README.md
c++/heli-attack/Res/Maps/: 1.helimap  glitch.helimap  test.helimap
c++/heli-attack/Source/: game.cpp  game.h  level.cpp  level.h  main.cpp  map_loader.cpp  map_loader.h  world.cpp  world.h
c++/heli-attack/Source/Components/: component_base.h  effected_by_gravity.cpp  effected_by_gravity.h  friction.cpp  friction.h  points_towards_direction.cpp  points_towards_direction.h  tile_collidable.cpp  tile_collidable.h
c++/heli-attack/Source/Components/Funcs/: tile_map_component_funcs.cpp  tile_map_component_funcs.h
c++/heli-attack/Source/Entities/: entity.cpp  entity.h  player.cpp  player.h  test_enemy.cpp  test_enemy.h
c++/heli-attack/Source/Entities/Util/: animation.cpp  animation.h
c++/heli-attack/Source/Functions/: out_of_bounds_checks.cpp  out_of_bounds_checks.h
c++/heli-attack/Source/Guns/: bullet.cpp  bullet.h
c++/heli-attack/Source/Managers/: font_m.cpp  font_m.h  music_m.cpp  music_m.h  sound_m.cpp  sound_m.h  texture_m.cpp  texture_m.h
c++/heli-attack/Source/Particles/: gravity_particle.cpp  gravity_particles.cpp  gravity_particles.h
c++/heli-attack/Source/States/: handler.cpp  handler.h  state_base.cpp  state_base.h  test.cpp  test.h
c++/heli-attack/Source/Tiles/: air.cpp  air.h  dirt.cpp  dirt.h  grass.cpp  grass.h  tile.cpp  tile.h
c++/heli-attack/Source/Tiles/Util/: tile_info.h  tile_model.cpp  tile_model.h
c++/heli-attack/Source/Util/: camera.cpp  camera.h  colours.cpp  colours.h  fps_counter.cpp  fps_counter.h  math_funcs.h  rand.cpp  rand.h  soundeffect.cpp  soundeffect.h  window.cpp  window.h
c++/heli-attack/scripts/: debug.sh  deploy.sh  run.sh
(+165 files in other folders)
